feat(replay): Add Mask and Unmask Android New Arch implementation